--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
+	<p>Hello some text</p>
 	<h1>Enter the number</h1>
+
 	<script src="js/m1.js"></script>
 </body>
 </html>
