--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
-	<p>Hello some text</p>
+
 	<h1>Enter the number</h1>
+	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam cum modi eaque laudantium laboriosam! Ratione iure distinctio necessitatibus laudantium et.</p>
 
 	<script src="js/m1.js"></script>
 </body>
